--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Catrina
+application.vendor=lm
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,16 @@ dist.jar=${dist.dir}/Catrina.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Catrina
+endorsed.classpath=
 excludes=
+file.reference.gson-2.10.jar=/home/lm/Downloads/gson-2.10.jar
 file.reference.gson-2.9.1.jar=/home/lm/Downloads/gson-2.9.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gson-2.9.1.jar}
+    ${file.reference.gson-2.9.1.jar}:\
+    ${file.reference.gson-2.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +82,7 @@ main.class=mx.itson.catrina.frontend.Interfaz
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=Oracle_OpenJDK_19.0.1_10
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
